# teamy-mft

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  Watch-Logs.ps1  build.rs  check-all.ps1  clippy.toml  install.ps1  links.md  make-icon.ps1  next-steps-v2.md  next-steps.md  next-steps.v3.md  refactor-summary-2025-09-25.md  run-profiler.ps1  run-tracing.ps1  structure_of_an_mft_record.md  teamy-mft-rules-20260607-014026.teamy-mft.teamy_mft_rules
.cargo/: config.toml
.config/tracey/: config.styx
.github/workflows/: ci.yml
assets/objects/: README.md
assets/objects/computer-tower/: computer-tower-2.glb  computer-tower-3.glb
assets/objects/golden-plated-magnifying-glass/: golden-plated-magnifying-glass.glb
assets/objects/hard-drive/: hard-drive.glb
assets/shaders/: rainbow_outline.wgsl
crates/teamy-mft-daemon-rpc/: Cargo.toml
crates/teamy-mft-daemon-rpc/src/: lib.rs
docs/notes/: 2026-03-23-tracey-audit-notes.md  2026-05-25-daemon-status-log-forwarding-handoff.md  2026-06-16-query-madness.md  daemon-service-console.md  daemon-worker-improvement-plan.md  parallel work.md  plan-fastQueryEngineRedesign.prompt.md
docs/spec/product/: cli.md  daemon-worker-runtime.md  index-file-format.md  mft-file-format.md  mft-io.md
docs/spec/repo/: publishing-standards.md
docs/spec/tools/: tool-standards.md
examples/: query_extension_counts.rs  query_git_repos.rs  query_software_counts.rs
memories/repo/: performance.md
notes/: 2026-05-24-daemon-introduction-and-current-state.md  LINKS.md  TODO.md  plan-fastQueryEngineRedesign.prompt.md  search-index.md
src/: drive_letter_pattern.rs  lib.rs  logging_init.rs  main.rs  mft_check.rs  mft_dump.rs  mft_iocp.rs  mft_process.rs  mft_read.rs  paths.rs  presentation.rs  status.rs  sync_dir.rs
src/bevy/: main.rs  mod.rs  sync_dir.rs
src/cancellation/: cancellation_token.rs  mod.rs  tests.rs
src/cli/: global_args.rs  json_log_behaviour.rs  mod.rs  to_args.rs
src/cli/command/: check.rs  command.rs  command_cli.rs  engine.rs  get_sync_dir.rs  list_paths.rs  mod.rs  query.rs  (+5 more)
src/daemon/: build_info.rs  correlation_id.rs  daemon_log_event.rs  degraded_drive_status.rs  if_exists_dto.rs  indexed_path_row_dto.rs  log_stream_request.rs  machine_daemon_rpc.rs  machine_error.rs  mod.rs  published_drive_status.rs  query_response.rs  query_stream_response.rs  status_request.rs  status_response.rs  sync_mode_dto.rs  sync_request.rs  usn_journal_request.rs  usn_journal_status.rs
src/domain/: facet_safe_non_zero_usize_option.rs  mod.rs  pathlike.rs
src/engine/: bytes_plugin.rs  camera_controller.rs  camera_controller_plugin.rs  camera_orbit_controller_plugin.rs  camera_right_click_controller_plugin.rs  camera_wasd_controller_plugin.rs  cleanup_plugin.rs  construction.rs  directory_children_plugin.rs  egui_plugin.rs  exit_condition.rs  expected_file_contents_plugin.rs  file_bytes_plugin.rs  file_contents_plugin.rs  file_contents_refresh_plugin.rs  file_metadata_plugin.rs  file_text_plugin.rs  focus_demo_objects_plugin.rs  hover_materials_plugin.rs  ideas.md  magnifying_glass_plugin.rs  mft_file_brick_plugin.rs  mft_file_overview_window_plugin.rs  mft_file_plugin.rs  mod.rs  pathbuf_holder_plugin.rs  persistence_plugin.rs  primary_window_plugin.rs  quit_button_window_plugin.rs  run.rs  search_window_plugin.rs  shimmer_material_plugin.rs  sync_dir_brick_plugin.rs  sync_dir_plugin.rs  timeout_plugin.rs  window_icon_plugin.rs  window_persistence_plugin.rs  world_inspector_plugin.rs  write_file_content_plugin.rs
src/logging_init/: stop_after_layer.rs
src/machine/: config.rs  daemon.rs  daemon_log.rs  ipc.rs  live_drive_state.rs  mod.rs  security.rs  service.rs  status.rs  usn.rs
src/mft/: fast_entry.rs  fast_fixup.rs  mft_convert_to_path_collection.rs  mft_data_run.rs  mft_file.rs  mft_location.rs  mft_physical_read.rs  mft_record.rs  mft_record_attribute.rs  mft_record_attribute_iter.rs  mft_record_attribute_non_resident_header.rs  mft_record_attribute_run_list.rs  mft_record_attribute_x80_data_attribute.rs  mft_record_flags.rs  mft_record_index.rs  mft_record_iter.rs  mft_record_location.rs  mft_record_number.rs  mft_record_reference.rs  mft_record_size.rs  mft_sequence_number.rs  mod.rs  path_resolve.rs
src/ntfs/: mod.rs  ntfs_boot_sector.rs  ntfs_drive_handle.rs
src/query/: ctrl_c_forwarder.rs  disk_query_executor.rs  drive_query_result.rs  indexed_path_row.rs  mod.rs  query_control_flow.rs  query_data_source.rs  query_execution_options.rs  query_filter.rs  query_filter_behavior.rs  query_filter_rules.rs  query_group.rs  query_ignore_behavior.rs  query_ignore_rules.rs  query_index_match.rs  query_limit.rs  query_needle.rs  query_path.rs  query_plan.rs  query_request_spec.rs  query_result_path.rs  query_result_row.rs  query_row_filter.rs  query_row_sink.rs  query_row_stream.rs  query_rule.rs  query_runtime.rs  query_scope.rs  query_session.rs  query_source.rs  query_string.rs  search_index_query.rs
src/read/: active_physical_read_request.rs  data_range_set.rs  logical_read_plan.rs  mod.rs  physical_read_plan.rs  physical_read_request.rs  physical_read_results.rs  physical_reader.rs
src/robocopy/: mod.rs  parser_machine.rs  robocopy_file_pattern.rs  robocopy_header.rs  robocopy_log.rs  robocopy_log_entry.rs  robocopy_log_parser.rs  robocopy_options.rs  robocopy_start_datetime.rs  sample.rtf  sample.txt
src/search_index/: format.rs  load.rs  mod.rs  search_index_bytes.rs
src/sync/: drive_sync_info.rs  if_exists_output_behaviour.rs  mod.rs  sync_executor.rs  sync_index.rs  sync_mft.rs  sync_mode.rs  sync_path.rs  sync_phase.rs  sync_plan.rs
src/tray/: mod.rs  window_proc.rs
src/windows/: mod.rs  rapid_reader.rs  win_elevation.rs  win_file_content_watch.rs  win_handle_read.rs  win_handles.rs  win_read_raw.rs  win_strings.rs
src/windows_utils/: ctrl_c.rs  mod.rs
tests/: cli_fuzzing.rs  depth.rs  nucleo_tests.rs  physical_rapid_reader_tests.rs  vox_daemon_log_channel.rs  write_results_helper_tests.rs
yapping/: next-steps-v2.md  next-steps.md  persistence.md  predicateland.md  project_summary.md
(+163 files in other folders)
