[package]
name = "teamy-mft"
version = "0.3.0"
edition = "2024"
authors = ["TeamDman"]
description = "TeamDman's MFT CLI and tooling"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
dunce = "1"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
widestring = "1.2.0"
windows = { version = "0.62.0", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
    "Win32_System_Console",
] }
tokio = { version = "1.47.1", features = ["full"] }
strum = { version = "0.27.2", features = ["derive"] }
itertools = "0.14.0"
humansize = "2.1.3"
crossbeam-channel = "0.5"
mft = { version = "0.6.1", git = "https://github.com/TeamDman/mft", branch = "mine" }
rustc-hash = "2.1.1"
winstructs = "0.3.2"
uom = { version = "0.37.0", features = ["autoconvert", "human", "u64"], git = "https://github.com/TeamDman/uom", branch = "mine" }
rayon = { version = "1.10" }
humantime = "2.2.0"
thousands = "0.2.0"
nucleo = "0.5.0"
chrono = "0.4.41"
bevy_ecs = "0.17.0-rc.1"
bevy_reflect = "0.17.0-rc.1"
compact_str = {version="0.9.0", git="https://github.com/TeamDman/compact_str", branch="mine", features=["bevy-reflect"]}
teamy-windows = "0.1.0"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# comment out if you aint me
[patch."https://github.com/TeamDman/mft"]
mft = { path = "D:/Repos/Rust/mft" }

# comment out if you aint me
[patch."https://github.com/TeamDman/uom"]
uom = { path = "../uom" }
