[package]
name = "teamy-mft"
version = "0.3.0"
edition = "2024"
authors = ["TeamDman"]
description = "TeamDman's MFT CLI and tooling"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/TeamDman/teamy-mft"
keywords = ["mft", "ntfs", "cli"]
categories = ["command-line-utilities", "file-system"]

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1.10.1"
directories = "5"
dunce = "1"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
widestring = "1.2.0"
windows = { version = "0.62.0", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
    "Win32_System_Console",
] }
tokio = { version = "1.47.1", features = ["full"] }
strum = { version = "0.27.2", features = ["derive"] }
itertools = "0.14.0"
humansize = "2.1.3"
crossbeam-channel = "0.5"
rustc-hash = "2.1.1"
winstructs = "0.3.2"
rayon = { version = "1.10" }
humantime = "2.2.0"
thousands = "0.2.0"
nucleo = "0.5.0"
chrono = "0.4.41"
teamy-windows = "0.3.0"
tempfile = "3.20"
teamy-uom-extensions = "0.1.0"
uom = { version = "0.37.0", features = ["usize"] }
compact_str = "0.9.0"
# mft = { version = "0.6.1", git = "https://github.com/TeamDman/mft", branch = "mine" }
mft = "0.6.1"
mimalloc = "0.1.48"

[build-dependencies]
embed-resource = "3.0.3"

[dev-dependencies]
tempfile = "3.20"

# [patch."https://github.com/TeamDman/mft"]
# mft = { path = "D:/Repos/Rust/mft" }

# [patch.crates-io]
# teamy-windows = { path = "../teamy-rust-windows-utils" }

# Enable for super duper release, slow as shit though.
# [profile.release]
# codegen-units = 1
# lto = true
# opt-level = "z"
# strip = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

# Define custom opt outs here
# ...
