[package]
name = "teamy-mft-daemon-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = { version = "0.46", features = ["uuid"] }
strum = { version = "0.27.2", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
vox = { version = "0.8.2", features = ["transport-local"] }
vox-types = "0.8.2"
